Make sure images display properly on small screens

--- a/sass/partials/_blog.scss
+++ b/sass/partials/_blog.scss
@@ -26,6 +26,7 @@ article {
   }
   .cover-image {
     width: 640px;
+    max-width: 100%;
     a img, img {
       border: none !important;
       border-radius: 0 !important;
